# interLink

./: .gitignore  .gitmodules  .golangci.json  .golangci.yml  .goreleaser.yaml  .jscpd.json  404.html  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.vk  GOVERNANCE.md  MAINTAINERS.md  MANTAINERS.md  Makefile  PR_463_REVIEW.md  PR_463_REVIEW_UPDATED.md  README.md  REVIEWING.md  ca2.crt  debug.sh  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  main.go  sitemap.xml  test  test-build.sh  webui-config.yaml
.container-use/: AGENT.md  environment.json
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md
ci/: .gitignore  LICENSE  README.md  dagger.json  go.mod  go.sum  k8s.go  main.go
docker/: Dockerfile.interlink  Dockerfile.vk
docs/: README.md  docusaurus.config.local.ts  docusaurus.config.ts  package-lock.json  package.json  versions.json
docs-new/: docusaurus.config.ts  package-lock.json  package.json
example/: create_openapi.py  debug.sh  interlink-config.yaml  provider_demo.py  provider_mock.py  test_pod.yaml  vk-config.yaml
interlink-openapi/: index.html
kustomizations/: InterLinkConfig.yaml  deployment.yaml  vk-cfg.json
markdown-page/: index.html
megalinter-reports/: megalinter-report.sarif
openapi/: index.html
plugin-openapi/: index.html
redocusaurus/: interlink-api.yaml  plugin-api.yaml  (+1 more)
test/portforward/: README.md  conftest.py  docker-compose.yml  pyproject.toml  test_tls_k8s.py  test_tunnel.py
test/portforward/configs/: client-tcp.toml  client-ws.toml  nginx.conf  server-tcp.toml  server-ws.toml
(+885 files in other folders)
